; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/zlib/contrib/untgz/extr_untgz.c_push_attr.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/zlib/contrib/untgz/extr_untgz.c_push_attr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.attr_item = type { i32, %struct.attr_item*, i32, i32 }

@.str = private unnamed_addr constant [14 x i8] c"Out of memory\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @push_attr(%struct.attr_item** %0, i8* %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.attr_item**, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca %struct.attr_item*, align 8
  store %struct.attr_item** %0, %struct.attr_item*** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %10 = call i64 @malloc(i32 24)
  %11 = inttoptr i64 %10 to %struct.attr_item*
  store %struct.attr_item* %11, %struct.attr_item** %9, align 8
  %12 = load %struct.attr_item*, %struct.attr_item** %9, align 8
  %13 = icmp eq %struct.attr_item* %12, null
  br i1 %13, label %14, label %16

14:                                               ; preds = %4
  %15 = call i32 @error(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0))
  br label %16

16:                                               ; preds = %14, %4
  %17 = load i8*, i8** %6, align 8
  %18 = call i32 @strdup(i8* %17)
  %19 = load %struct.attr_item*, %struct.attr_item** %9, align 8
  %20 = getelementptr inbounds %struct.attr_item, %struct.attr_item* %19, i32 0, i32 3
  store i32 %18, i32* %20, align 4
  %21 = load i32, i32* %7, align 4
  %22 = load %struct.attr_item*, %struct.attr_item** %9, align 8
  %23 = getelementptr inbounds %struct.attr_item, %struct.attr_item* %22, i32 0, i32 0
  store i32 %21, i32* %23, align 8
  %24 = load i32, i32* %8, align 4
  %25 = load %struct.attr_item*, %struct.attr_item** %9, align 8
  %26 = getelementptr inbounds %struct.attr_item, %struct.attr_item* %25, i32 0, i32 2
  store i32 %24, i32* %26, align 8
  %27 = load %struct.attr_item**, %struct.attr_item*** %5, align 8
  %28 = load %struct.attr_item*, %struct.attr_item** %27, align 8
  %29 = load %struct.attr_item*, %struct.attr_item** %9, align 8
  %30 = getelementptr inbounds %struct.attr_item, %struct.attr_item* %29, i32 0, i32 1
  store %struct.attr_item* %28, %struct.attr_item** %30, align 8
  %31 = load %struct.attr_item*, %struct.attr_item** %9, align 8
  %32 = load %struct.attr_item**, %struct.attr_item*** %5, align 8
  store %struct.attr_item* %31, %struct.attr_item** %32, align 8
  ret void
}

declare dso_local i64 @malloc(i32) #1

declare dso_local i32 @error(i8*) #1

declare dso_local i32 @strdup(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
